...
            android:layout_height="wrap_content"
            android:text="Sélection des matières :"
            android:textColor="#000000"
            android:textSize="37dp" />

        <ExpandableListView
            android:id="@+id/UE_list"
            android:layout_width="match_parent"
            android:layout_height="456dp"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="80dp">
        </ExpandableListView>

        <Button
            android:id="@+id/buttonValider"
            android:layout_width="358dp"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:onClick="onClickBtn"
            android:text="Valider" />
...
