...
        android:layout_height="188dp"
        app:srcCompat="@mipmap/uni_logo"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="29dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="Bienvenue à la plateforme de création de parcours de l'université CÔTE D'AZUR "
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

...
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp">

    </ListView>

    <Button
        android:id="@+id/btninscription"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
...
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/custom_button2"
        android:text="S'inscrire" />

    <Button
        android:id="@+id/btnpar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
...
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/custom_button2"
        android:text="Se connecter" />

    <Button
        android:id="@+id/btnconsultation"
        android:layout_width="wrap_content"
        android:layout_height="102dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/custom_button2"
        android:text="Consulter les parcours choisis par les autres étudiants"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />


    <Button
        android:id="@+id/btnmdpoublie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Mot de passe oublié ?"
        android:textSize="15sp"
        android:layout_gravity="center"
        style="@style/Widget.MaterialComponents.Button.TextButton"
...
