...
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:gravity="end"
            android:text="Numéro étudiant : " />

        <AutoCompleteTextView
            android:id="@+id/userName"
            android:hint="Numéro étudiant"
            android:inputType="text" />

    </TableRow>

    <TableRow
...
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:gravity="end"
            android:text="Mot de passe : " />

        <EditText
            android:id="@+id/password"
            android:hint="Mot de passe"
            android:inputType="textPassword" />

    </TableRow>

    <TableRow android:gravity="center_horizontal">

        <Button
            android:id="@+id/button_cancel_user_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Annuler"
            android:textSize="20dp"
            android:textAllCaps="false"
            android:gravity="center_horizontal"
            android:layout_marginBottom="20dp"/>


        <Button
            android:id="@+id/button_connexion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Valider"
            android:textSize="20dp"
            android:textAllCaps="false"
            android:gravity="center_horizontal"
            android:layout_marginBottom="20dp"/>

    </TableRow>
...
